assets/css/amp-editor-story-blocks.css
/* ... */
@media (min-width: 961px) {
	#amp-story-editor {
		overflow-x: hidden;
	}

	#amp-story-editor > .editor-block-list__layout {
		padding-left: 0;
		padding-right: 0;
		display: flex;
		align-items: center;
		transform: none;
		transition: transform 300ms linear;
	}

	.editor-block-list__layout div[data-type="amp/amp-story-page"] {
		flex: 0 0 auto;
		position: relative;
		transition: border 300ms linear;
	}

	.editor-block-list__layout div[data-type="amp/amp-story-page"] + div[data-type="amp/amp-story-page"] {
		margin-left: 20px;
	}

	.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-active {
		border-color: #ccc;
	}

	.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-active::after {
		background-color: #ccc;
	}

	.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-inactive {
		opacity: .5;
	}

	.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-inactive > div {
		pointer-events: none;
	}

	.editor-block-list__layout div[data-type="amp/amp-story-page"] .amp-story-page-number {
		position: absolute;
		top: -3em;
		text-transform: uppercase;
		font-weight: 600;
		font-size: 12px;
		color: #666;
		letter-spacing: 1px;
	}

	.amp-story-editor-carousel-navigation {
		display: flex;
		justify-content: space-between;
		margin-top: 2em;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list {
		flex: 1;
		display: flex;
		margin: 0;
		padding: 0;
		list-style-type: none;
		justify-content: center;
		max-width: 30%;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list .amp-story-editor-carousel-item {
		flex: 1;
		height: .5em;
		max-width: 5em;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list .amp-story-editor-carousel-item + .amp-story-editor-carousel-item {
		margin-left: 20px;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list button {
		background: #eff0f1;
		width: 100%;
		height: 100%;
		display: block;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list button:hover,
	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list button:focus {
		background: #e0e0e0;
	}

	.editor-styles-wrapper ul.amp-story-editor-carousel-item-list .amp-story-editor-carousel-item--active button {
		background: #666;
	}

	#amp-story-controls {
		text-align: right;
	}

	#amp-story-controls .amp-story-controls-reorder {
		display: inline-block;
		line-height: 1;

	}

	.edit-post-visual-editor .editor-post-title__block {
		margin-left: 0;
		margin-right: 0;
	}

	.amp-story-controls-reorder-cancel {
		padding-top: 2px;
		padding-bottom: 2px;
		margin-right: 20px;
		display: inline-flex;
	}

	.amp-story-reorderer {
		margin-top: 100px;
		display: grid;
		grid-template-columns: repeat(auto-fill, 169px);
		grid-gap: 1rem;
		justify-content: space-between;
	}

	.amp-story-reorderer .amp-story-reorderer-item {
		margin: 0 auto 10px;
		width: 100%;
		max-width: 169px;
		height: 277px;
		position: relative;
	}

	.amp-story-reorderer .amp-story-reorderer-item .components-drop-zone {
		border: none;
		border-radius: 0;
		background: transparent;
	}

	.amp-story-reorderer .amp-story-reorderer-item .components-drop-zone.is-active {
		opacity: 0;
		visibility: hidden;
	}

	.amp-story-reorderer .amp-story-reorderer-item .components-drop-zone.is-dragging-page,
	.amp-story-reorderer .amp-story-reorderer-item .components-drop-zone.is-dragging-over-element {
		opacity: 1;
		visibility: visible;
		transition: opacity .3s,background-color .3s;
	}

	.amp-story-reorderer .amp-story-reorderer-item .components-drop-zone.is-dragging-page {
		background: #eff0f1;
		border: none !important;
	}

	.amp-story-reorderer .amp-story-reorderer-item .components-drop-zone.is-dragging-over-element.is-close-to-right {
		border-right: 3px solid #0071a1;
	}

	.amp-story-reorderer .amp-story-reorderer-item .components-drop-zone.is-dragging-over-element.is-close-to-left {
		border-left: 3px solid #0071a1;
	}

	.amp-story-reorderer .amp-story-reorderer-item .components-drop-zone__content,
	.amp-story-reorderer .amp-story-reorderer-item .is-dragging-over-element .components-drop-zone__content {
		display: none;
	}

	.amp-story-reorderer .amp-story-page-preview {
		border: 5px solid #eff0f1;
		border-radius: 5px;
		background: #fff;
		width: 100%;
		height: 277px;
		cursor: grab;
	}

	.amp-story-reorderer .amp-story-page-preview .editor-styles-wrapper {
		margin: 0;
	}

	.amp-story-reorderer .amp-story-page-preview .editor-block-list__layout {
		padding: 0;
	}

	.amp-story-reorderer .amp-story-page-preview .block-list-appender {
		display: none;
	}

	.components-icon-button.editor-block-navigation {
		display: none;
	}

	#amp-root-navigation {
		position: absolute;
		left: 5px;
		top: 218px;
		width: 300px;
		z-index: 80;
		list-style-type: none;
		padding: 0;
		margin: 0;
	}

	#amp-root-navigation .editor-inserter {
		position: absolute;
		bottom: 100%;
		left: 0;
		width: 100%;
	}

	.post-type-amp_story #amp-root-navigation .components-popover:not(.is-mobile).is-center .components-popover__content {
		transform: translateX( -13% );
	}

	.post-type-amp_story.folded #amp-root-navigation .components-popover:not(.is-mobile):not(.is-middle).is-right .components-popover__content {
		margin-left: -50px;
	}

	#amp-root-navigation .editor-block-navigation__list {
		list-style-type: none;
	}

	#amp-root-navigation .components-icon-button .dashicon {
		margin-right: 5px;
	}

	.editor-block-navigation__container {
		background: #fff;
		border: 1px solid #eee;
	}

	.editor-block-navigation__container .component-editor__selector button {
		background: no-repeat left top;
		padding-left: 37px;
		height: 40px;
		margin: 1px 0 1px 4px;
	}

	.editor-block-navigation__container .component-editor__selector .components-button:focus {
		box-shadow: none;
	}

	.post-type-amp_story .components-range-control__number {
		width: 60px;
	}
}
/* ... */

